additional documentation qosdaemon

--- a/opennms-qosdaemon/src/site/resources/faq.html
+++ b/opennms-qosdaemon/src/site/resources/faq.html
@@ -8,14 +8,12 @@
     </style>
     <link rel="stylesheet" href="./css/print.css" type="text/css" media="print" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>Usage</title>
+<title>faq</title>
 </head>
 <body>
-<h1>Example usage</h1>
+<h1>FAQ</h1>
 
-<p>For example usage see the pdf documentation in the OpenNMS contrib directory</p>
-
-<p>$OpenNMS_Home/contrib/qosdaemon</P>
+<p>TBD</p>
 
 </body>
-</html>
+</html> 
