more tweaks in the design

--- a/opennms-dashboard/src/main/java/org/opennms/dashboard/public/index.html
+++ b/opennms-dashboard/src/main/java/org/opennms/dashboard/public/index.html
@@ -8,5 +8,24 @@
   </head>
   <body>
     <script type="text/javascript" language='javascript' src='gwt.js'></script>
+    <table border="1" cellspacing="5" width="100%">
+      <thead>
+      <tr><th colspan="4">Dashboard</th></tr>
+      </thead>
+      <tbody>
+      	<tr>
+      		<td id="siteStatus"></td>
+      		<td id="alarms"></td>
+      		<td colspan="2" id="events"></td>
+        </tr>
+      	<tr>
+      		<td id="outages"></td>
+      		<td id="nodeStatus"></td>
+      		<td id="notifications"></td>
+      		<td id="graphs"></td>
+      	</tr>
+      </tbody>
+    </table>
+      
   </body>
 </html>
