--- a/opennms-webapp/src/main/java/org/opennms/dashboard/public/index.html
+++ b/opennms-webapp/src/main/java/org/opennms/dashboard/public/index.html
@@ -14,7 +14,7 @@
       </thead>
       <tbody>
       	<tr>
-      		<td id="siteStatus"></td>
+      		<td id="surveillanceView"></td>
       		<td id="alarms"></td>
       		<td colspan="2" id="events"></td>
         </tr>
