NMS-15506: upgrade to spring-security 4.2

--- a/features/poller/monitors/core/src/test/resources/loginTestWar/events.html
+++ b/features/poller/monitors/core/src/test/resources/loginTestWar/events.html
@@ -7,7 +7,7 @@
 <body>
 
 
-To Log out click <a href="j_spring_security_logout">here.</a>
+To Log out click <a href="/logout">here.</a>
 
 I really like Event Queries.
 
