--- a/features/poller/monitors/core/src/test/resources/loginTestWar/login.html
+++ b/features/poller/monitors/core/src/test/resources/loginTestWar/login.html
@@ -7,7 +7,7 @@
 <body>
 
 
-To Log out click <a href="j_spring_security_logout">here.</a>
+To Log out click <a href="/logout">here.</a>
 
 Click <a href="events.html">here</a> to see some events.
 
