--- a/features/datachoices/src/main/resources/web/modal.ftl.html
+++ b/features/datachoices/src/main/resources/web/modal.ftl.html
@@ -1,71 +1,72 @@
-<div class="modal" id="datachoices-modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Help Improve OpenNMS</h4>
-            </div>
-            <div class="modal-body">
-                <p>Please opt-in to send anonymous OpenNMS usage statistics to <a target="_blank" href="https://stats.opennms.org">OpenNMS Statistics</a>. This will help us improve your OpenNMS software, subject to our <a target="_blank" href="https://www.opennms.com/privacy/">privacy policy</a>. You can change this setting at any time from the Admin menu.</p>
-				<div id="previewCard" class="card">
-				    <div class="card-header" role="tab" id="headingThree">
-				      <h6 class="mb-0 card-title">
-				        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#previewCard" href="#datachoices-preview">
-				          Show me what is being sent.
-				        </a>
-				      </h6>
-				    </div>
-				    <div id="datachoices-preview" class="card-collapse collapse" role="tabpanel">
-				      <div class="card-body">
-				        <div id="datachoices-preview-spinner" class="text-center"><i class="fa fa-spinner fa-spin fa-3x"></i></div>
-				        <div id="datachoices-preview-content"></div>
-				      </div>
-				    </div>
-				  </div>
-            </div>
-            <div class="modal-footer">
-                <button id="datachoices-enable" type="button" class="btn btn-success" data-dismiss="modal">Opt-in</button>
-           		<button id="datachoices-disable" type="button" class="btn btn-secondary" data-dismiss="modal">Opt-out</button>
-            </div>
-        </div>
-    </div>
+<style>
+    #usage-statistics-sharing-modal .modal-dialog {
+       position: fixed;
+       top: auto;
+       right: auto;
+       left: calc(50% - 400px);
+       bottom: 0;
+       min-width: 800px;
+    }
+</style>
+
+<div class="modal" id="usage-statistics-sharing-modal" tabindex="-1" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h4 class="modal-title">Usage Statistics Sharing Notice</h4>
+			</div>
+			<div class="modal-body">
+				<p>Anonymous OpenNMS usage statistics is sent to
+					<a target="_blank" href="https://stats.opennms.org">OpenNMS Statistics</a>.
+					This will help us improve your OpenNMS software, subject to our
+					<a target="_blank" href="https://www.opennms.com/privacy/">privacy policy</a>.</p>
+			</div>
+			<div class="modal-footer">
+				<button id="usage-statistics-sharing-notice-learn-more" type="button" class="btn btn-success">Learn More</button>
+				<button id="usage-statistics-sharing-notice-dismiss" type="button" class="btn btn-secondary" data-dismiss="modal">Dismiss</button>
+			</div>
+		</div>
+	</div>
 </div>
 
 <script type="text/javascript">
-(function(){
+(function() {
+    function ackInitialNotice(redirectUrl) {
+        var data = { initialNoticeAcknowledged: true };
+        $.ajax({
+            url: 'rest/datachoices/status',
+            method: 'POST',
+            dataType: 'json',
+            contentType: 'application/json',
+            processData: false,
+            data: JSON.stringify(data),
+            statusCode: {
+                 202: function() {
+                    if (redirectUrl) {
+                        window.location = redirectUrl;
+                    }
+                }
+            }
+        });
+    }
+
     $(document).ready(function() {
-    	$('#datachoices-preview').on('show.bs.collapse', function () {
-    		$.get('rest/datachoices')
-    		  .done(function(data) {
-    			  $('#datachoices-preview-content').html("<pre>" + JSON.stringify(data, null, 2) + "</pre>");
-    		  })
-    		  .fail(function() {
-    			  $('#datachoices-preview-content').html("<p>There was an error retrieving the content. See server logs for details.</p>");
-    		  })
-    		  .always(function() {
-    			  $('#datachoices-preview-spinner').hide();
-    		  });
-   		});
-   		$('#datachoices-modal').on('shown.bs.modal', function () {
-   		    $(this).find('.modal-dialog').css({height:'auto', 'max-height':'100%'});
-   			$('#datachoices-enable').focus();
- 		});
-    	$('#datachoices-enable').click(function() {
-    		$.post('rest/datachoices?action=enable');
-    	});
-    	$('#datachoices-disable').click(function() {
-    		$.post('rest/datachoices?action=disable');
-    	});
-    	<#if showOnLoad>
-    	$('#datachoices-modal').modal({
-    		  keyboard: false,
-    		  backdrop: 'static'
-    	});
-    	</#if>
+        $('#usage-statistics-sharing-modal').on('shown.bs.modal', function () {
+            $(this).find('.modal-dialog').css({height:'auto', 'max-height':'100%'});
+            $('#usage-statistics-sharing-notice-learn-more').focus();
+        });
+        $('#usage-statistics-sharing-notice-dismiss').click(function() {
+            ackInitialNotice();
+        });
+        $('#usage-statistics-sharing-notice-learn-more').click(function() {
+            ackInitialNotice('ui/index.html#/usage-statistics');
+        });
+        <#if showOnLoad>
+            $('#usage-statistics-sharing-modal').modal({
+                keyboard: false,
+                backdrop: 'static'
+            });
+        </#if>
     });
 })();
-<#if !showOnLoad>
-function showDataChoicesModal() {
-	$('#datachoices-modal').modal('show');
-}
-</#if>
 </script>
