Adding Grafana 9.x plugin

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
         <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/grafana-plugin?branch=release-8.x">Grafana plugin: 8.x</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/grafana-plugin?branch=release-8.x"><img alt="Grafana plugin: 8.x" src="https://circleci.com/gh/OpenNMS/grafana-plugin/tree/release-8.x.svg?style=svg" /></a></td>
       </tr>
       <tr>
+        <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/grafana-plugin?branch=release-9.x">Grafana plugin: 9.x</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/grafana-plugin?branch=release-9.x"><img alt="Grafana plugin: 9.x" src="https://circleci.com/gh/OpenNMS/grafana-plugin/tree/release-9.x.svg?style=svg" /></a></td>
+      </tr>
+      <tr>
         <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/grafana-plugin?branch=develop">Grafana plugin: develop</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/grafana-plugin?branch=develop"><img alt="Grafana plugin: develop" src="https://circleci.com/gh/OpenNMS/grafana-plugin.svg?style=svg" /></a></td>
       </tr>
       <tr>
