--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
       <tr>
         <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/alec?branch=develop">ALEC develop</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/alec?branch=develop"><img alt="ALEC develop" src="https://circleci.com/gh/OpenNMS/alec/tree/develop.svg?style=svg" /></a></td>
       </tr>
+      <tr>
+        <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/docs.opennms.com?branch=master">Documentation</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/docs.opennms.com?branch=master"><img alt="Documentation" src="https://circleci.com/gh/OpenNMS/docs.opennms.com/tree/master.svg?style=svg" /></a></td>
+      </tr>
     </table>
   </body>
 </html>
