NMS-16027: Updated Usage Stats Sharing banner wording

--- a/features/datachoices/src/main/resources/web/modal.ftl.html
+++ b/features/datachoices/src/main/resources/web/modal.ftl.html
@@ -68,13 +68,15 @@
 				<h5 class="modal-title">Usage Statistics Sharing Notice</h5>
 			</div>
 			<div id="usage-stats-alert-body" class="modal-body">
-				<div class="usage-stats-content">Anonymous OpenNMS usage statistics are sent to
-					<a target="_blank" href="https://stats.opennms.org">OpenNMS Statistics</a>.
-					This will help us improve your OpenNMS software, subject to our
-					<a target="_blank" href="https://www.opennms.com/privacy/">privacy policy</a>.</div>
+				<div class="usage-stats-content">
+					Your OpenNMS instance shares anonymous
+				    <a target="_blank" href="https://stats.opennms.org">usage statistics</a> by default.
+					Our <a target="_blank" href="https://www.opennms.com/privacy/">privacy policy</a>
+					governs our use of this data to improve the software. Click <em>Learn More</em> for directions to opt out.
+				</div>
 				<div class="usage-stats-buttons">
 					<button id="usage-statistics-sharing-notice-learn-more" type="button" class="btn usage-stats-button usage-stats-learn-button">Learn More</button>
-					<button id="usage-statistics-sharing-notice-dismiss" type="button" class="btn usage-stats-button usage-stats-dismiss-button" data-dismiss="alert">Dismiss</button>
+					<button id="usage-statistics-sharing-notice-dismiss" type="button" class="btn usage-stats-button usage-stats-dismiss-button" data-dismiss="alert">Got It</button>
 				</div>
 			</div>
 		</div>
