NMS-16326: User Data Collection page to sign up / re-enable the sign up dialog

--- a/features/datachoices/src/main/resources/web/user-data-collection.ftl.html
+++ b/features/datachoices/src/main/resources/web/user-data-collection.ftl.html
@@ -179,7 +179,7 @@
                     and other products, please enter the information below and click Sign Up.
                     You may also choose Opt Out to close this message.
 
-                    This notice will only display once, but you can visit <a href="#">here</a> to sign up.
+                    This notice will only display once, but you can visit <a href="admin/user-data-collection/index.jsp">here</a> to re-enable sign up.
                 </div>
                 <br />
                 <div id="user-data-collection-form-wrapper">
