NMS-16352: fix apostrophe

--- a/features/datachoices/src/main/resources/web/user-data-collection.ftl.html
+++ b/features/datachoices/src/main/resources/web/user-data-collection.ftl.html
@@ -175,8 +175,8 @@
             </div>
             <div id="user-data-collection-alert-body" class="modal-body">
                 <div class="user-data-collection-content">
-                    Now that you&rsquo;re part of the OpenNMS community, let&rsquo;s stay in touch!
-                    Share your info and we&rsquo;ll keep you up to date on the latest from
+                    Now that you're part of the OpenNMS community, let's stay in touch!
+                    Share your info and we'll keep you up to date on the latest from
                     OpenNMS Horizon and Meridian as well as our upcoming cloud hosted solution, Lokahi.
 
                     This notice will only display once, but you can visit <a href="admin/user-data-collection/index.jsp">here</a> to re-enable sign up.
