NMS-16352: Update User Data Collection wording only (#7095)
* NMS-16352: Update User Data Collection wording only.

* NMS-16352: fix apostrophe

--- a/features/datachoices/src/main/resources/web/user-data-collection.ftl.html
+++ b/features/datachoices/src/main/resources/web/user-data-collection.ftl.html
@@ -171,13 +171,13 @@
     <div class="alert-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">User Data Collection</h5>
+                <h5 class="modal-title">Product Update Sign Up</h5>
             </div>
             <div id="user-data-collection-alert-body" class="modal-body">
                 <div class="user-data-collection-content">
-                    If you would like to receive more information about OpenNMS Horizon, Meridian
-                    and other products, please enter the information below and click Sign Up.
-                    You may also choose Opt Out to close this message.
+                    Now that you're part of the OpenNMS community, let's stay in touch!
+                    Share your info and we'll keep you up to date on the latest from
+                    OpenNMS Horizon and Meridian as well as our upcoming cloud hosted solution, Lokahi.
 
                     This notice will only display once, but you can visit <a href="admin/user-data-collection/index.jsp">here</a> to re-enable sign up.
                 </div>
