--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
         <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=foundation-2023">Foundation 2023</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=foundation-2023"><img alt="Foundation 2023" src="https://circleci.com/gh/OpenNMS/opennms/tree/foundation-2023.svg?style=svg" /></a></td>
       </tr>
       <tr>
-        <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=merge-foundation/foundation-2023-to-release-33.x">Foundation 2023 -&gt; Horizon 33.x</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=merge-foundation/foundation-2023-to-release-33.x"><img alt="Foundation 2023 -&gt; Horizon 33.x" src="https://circleci.com/gh/OpenNMS/opennms/tree/merge-foundation%2ffoundation-2023-to-release-33.x.svg?style=svg" /></a></td>
+        <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=merge-foundation/foundation-2023-to-foundation-2024">Foundation 2023 -&gt; Foundation 2024</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=merge-foundation/foundation-2023-to-foundation-2024"><img alt="Foundation 2023 -&gt; Foundation 2024" src="https://circleci.com/gh/OpenNMS/opennms/tree/merge-foundation%2ffoundation-2023-to-foundation-2024.svg?style=svg" /></a></td>
+      </tr>
+      <tr>
+        <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=foundation-2024">Foundation 2024</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=foundation-2024"><img alt="Foundation 2024" src="https://circleci.com/gh/OpenNMS/opennms/tree/foundation-2024.svg?style=svg" /></a></td>
+      </tr>
+      <tr>
+        <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=merge-foundation/foundation-2024-to-release-33.x">Foundation 2024 -&gt; Horizon 33.x</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=merge-foundation/foundation-2024-to-release-33.x"><img alt="Foundation 2024 -&gt; Horizon 33.x" src="https://circleci.com/gh/OpenNMS/opennms/tree/merge-foundation%2ffoundation-2024-to-release-33.x.svg?style=svg" /></a></td>
       </tr>
       <tr>
         <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=release-33.x">Horizon 33.x</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms?branch=release-33.x"><img alt="Horizon 33.x" src="https://circleci.com/gh/OpenNMS/opennms/tree/release-33.x.svg?style=svg" /></a></td>
@@ -126,6 +132,12 @@
       </tr>
       <tr>
         <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms-prime?branch=release-2023.x">Meridian 2023.x</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms-prime?branch=release-2023.x"><img alt="Meridian 2023.x" src="https://circleci.com/gh/OpenNMS/opennms-prime/tree/release-2023.x.svg?style=svg&circle-token=b9fdf5e4d80810a108315a157e9d1e68c9ef6ec9" /></a></td>
+      </tr>
+      <tr>
+        <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms-prime?branch=from-foundation-2024">Foundation 2024 -&gt; Meridian 2024.x</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms-prime?branch=from-foundation-2024"><img alt="Foundation 2023 -&gt; Meridian 2024.x" src="https://circleci.com/gh/OpenNMS/opennms-prime/tree/from-foundation-2024.svg?style=svg&circle-token=b9fdf5e4d80810a108315a157e9d1e68c9ef6ec9" /></a></td>
+      </tr>
+      <tr>
+        <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms-prime?branch=release-2023.x">Meridian 2024.x</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/opennms-prime?branch=release-2024.x"><img alt="Meridian 2024.x" src="https://circleci.com/gh/OpenNMS/opennms-prime/tree/release-2024.x.svg?style=svg&circle-token=b9fdf5e4d80810a108315a157e9d1e68c9ef6ec9" /></a></td>
       </tr>
       <!--
       <tr>
