--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@
       <tr>
         <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/poweredby-2023?branch=master">Powered By 2023</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/poweredby-2023?branch=master"><img alt="Powered By 2023" src="https://circleci.com/gh/OpenNMS/poweredby-2023/tree/master.svg?style=svg&circle-token=21cd77ce875ad1ed5ac4dd14a0f6450397725081" /></a></td>
       </tr>
+      <tr>
+        <td><a href="https://app.circleci.com/pipelines/github/OpenNMS/poweredby-2024?branch=master">Powered By 2024</a></td><td><a href="https://app.circleci.com/pipelines/github/OpenNMS/poweredby-2024?branch=master"><img alt="Powered By 2024" src="https://circleci.com/gh/OpenNMS/poweredby-2024/tree/master.svg?style=svg&circle-token=CCIPRJ_4A7yHAogWpQiZYMGeBHqot_2b899f30648e8d6cbd1bfe8087aed73cd6772d39" /></a></td>
+      </tr>
     </table>
     <table>
       <tr>
